add translate service; add frinds: controller, service, repo, entity, util, status enum ...

--- a/fullstack/backend/src/main/resources/i18n/messages_en.properties
+++ b/fullstack/backend/src/main/resources/i18n/messages_en.properties
@@ -1,6 +1,7 @@
-bad_request.User_name_and_password_must_be_set= User name & password must be set!
-bad_request.User_name_already_taken= User name already taken!
-bad_request.Email_already_taken= Email already taken!
-
-Exception.notFound=No record of {0} could be found with id {1}.
+bad_request.User_name_and_password_must_be_set=User name & password must be set!
+bad_request.User_name_already_taken=User name already taken!
+bad_request.Email_already_taken=Email already taken!
+ex.user_not_found=User Not Found!
+ex.permission_denied=Permission denied!
 Exception.unexpected=An unexpected error occurred while processing your request.
+Exception.internal=Internal server error.
