--- a/fullstack/backend/src/main/resources/i18n/messages_zh.properties
+++ b/fullstack/backend/src/main/resources/i18n/messages_zh.properties
@@ -2,6 +2,7 @@ bad_request.User_name_and_password_must_be_set= 请填入用户名和密码
 bad_request.User_name_already_taken= 用户名已存在
 bad_request.Email_already_taken= 邮箱已存在
 
-
-Exception.notFound= 记录 {0} 没找到 {1}.
+ex.user_not_found= 用户不存在
+ex.permission_denied= 没有权限
 Exception.unexpected= 未知错误
+Exception.internal= 内部错误
