add Ionic frontend: register + login; fix backend: browser preflight OPTIONS request caused 401 ...

--- a/fullstack/backend/src/main/resources/i18n/messages_en.properties
+++ b/fullstack/backend/src/main/resources/i18n/messages_en.properties
@@ -3,5 +3,6 @@ bad_request.User_name_already_taken=User name already taken!
 bad_request.Email_already_taken=Email already taken!
 ex.user_not_found=User Not Found!
 ex.permission_denied=Permission denied!
+ex.not_valid_request=Not valid request!
 Exception.unexpected=An unexpected error occurred while processing your request.
 Exception.internal=Internal server error.
