--- a/fullstack/backend/src/main/resources/i18n/messages_zh.properties
+++ b/fullstack/backend/src/main/resources/i18n/messages_zh.properties
@@ -1,8 +1,8 @@
-bad_request.User_name_and_password_must_be_set= 请填入用户名和密码
-bad_request.User_name_already_taken= 用户名已存在
-bad_request.Email_already_taken= 邮箱已存在
-
-ex.user_not_found= 用户不存在
-ex.permission_denied= 没有权限
-Exception.unexpected= 未知错误
-Exception.internal= 内部错误
+bad_request.User_name_and_password_must_be_set=请填入用户名和密码
+bad_request.User_name_already_taken=用户名已存在
+bad_request.Email_already_taken=邮箱已存在
+ex.user_not_found=用户不存在
+ex.permission_denied=没有权限
+ex.not_valid_request=无效请求
+Exception.unexpected=未知错误
+Exception.internal=内部错误
